1557798987 | 57 files | M bin/version.txt,  M content/panorama/localization/tenfoot_english.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_french.txt,  M content/vrmonitor/translations/vrmonitor_errors_german.txt,  M content/vrmonitor/translations/vrmonitor_errors_greek.txt,  M content/vrmonitor/translations/vrmonitor_errors_hungarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_japanese.txt,  M content/vrmonitor/translations/vrmonitor_errors_romanian.txt,  M content/vrmonitor/translations/vrmonitor_errors_spanish.txt,  M content/vrmonitor/translations/vrmonitor_errors_swedish.txt,  M content/vrmonitor/translation
https://steamdb.info/patchnotes/3820383/

--- a/content/panorama/localization/tenfoot_english.txt
+++ b/content/panorama/localization/tenfoot_english.txt
@@ -238,8 +238,8 @@
 	"NotificationsDesc"	"Suppresses incoming notifications."
 	"NotificationsCheck" "Do Not Disturb"
 
-	"HomeAppCheck" "SteamVR Home Beta"
-	"HomeAppDesc" "The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
+	"HomeAppCheck" "SteamVR Home"
+	"HomeAppDesc" "SteamVR Home experience supports richer home spaces, social features, and more."
 
 	"NightModeCheck" "Night Mode"
 	"NightModeDesc" "Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
@@ -337,13 +337,6 @@
 	"SettingsTime_1h" "after 1 hour of idle time"
 	"SettingsTime_Never" "Never"
 
-	"VRSettingsKnucklesTitle" "Knuckles"
-	"VRSettingsKnuckles_CapsenseMode" "Cap Sense Mode"
-	"KnucklesCapsenseMode_0" "Finger Tracking (Default)"
-	"KnucklesCapsenseMode_1" "Finger Tracking Disabled"
-	"KnucklesCapsenseMode_2" "Cap Sense controls Trigger"
-	"KnucklesCapsenseMode_3" "Cap Sense controls Grip"
-	
 	"VRSettingsGeneral" "SteamVR Settings"
 	"VRSettingsBindingUITitle" "Controller Binding"
 	"VRSettingsTrackerUITitle" "Manage Vive Trackers"
