--- a/content/vrmonitor/translations/vrmonitor_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_danish.txt
@@ -245,8 +245,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"Kunne ikke starte %1. Applikationens grænseflade er ikke tilgængelig."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"Kunne ikke starte %1. Fejl: %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"Kunne ikke starte %1: %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Version %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Dette nulstiller installationen af SteamVR fuldstændigt og genstarter applikationen."
@@ -1377,8 +1377,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Succes!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
-"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Basisstationen er blevet opdateret. Du skal muligvis fjerne og tilslutte strømstikket til basisstationen, før den registreres som opdateret."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Basisstationen er blevet opdateret. Du skal muligvis fjerne og tilslutte strømstikket til basisstationen igen, før den registreres som opdateret."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Nogle skærme afspejler (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Ukendt hardware registreret (0x2000)"
@@ -2307,9 +2307,87 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 kunne ikke oprette forbindelse. Klik \"Opdater\" for at prøve igen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Vækker basisstationer..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
-"Monitor_PuttingBaseStationsInStandby"	"Basisstationer går i standby..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"Monitor_WakingBaseStations"	"Basisstationer tændes..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby"	"Basisstationer slukkes..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Genopret fra en ufuldstændig opdatering"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Reparer en afbrudt eller annulleret opdatering, som forhindrer basisstationen i at spore normalt."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Denne basisstation skal registreres igen optisk med genstart af SteamVR, før opdateringen kan fortsætte."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Denne basisstation skal genstartes og registreres igen optisk med genstart af SteamVR, før opdateringen kan fortsætte. Fjern strømstikket til basisstationen, og tilslut det igen."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Denne basisstation har en nyere version af opdateringen og har afvist den."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Klik på \"Prøv igen\" for at prøve igen."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Klik på \"Annuller\" nedenfor for at genstarte SteamVR."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Starter... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Scanner... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Gendannelse af opdatering til basisstation 2.0"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Scanner efter basisstationer...\n\n%1 sekunder tilbage."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Scanner efter basisstationer...\n\nIkke udført."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Scanning udført.<br><br><font color=#ffffff><b>Der blev registreret en basisstation med en ufuldstændig opdatering, som forhindrer den i at fungere normalt.</b></font><br><br>Klik på \"Opdater enhed\" nedenfor for at fortsætte med opdateringen."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Scanning udført.\n\nDer er ingen basisstation i nærheden, som broadcaster, som har brug for gendannelse."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Scan igen"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Opdater enhed"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Ingen fejl"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Applikationen er allerede registreret"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Intet applikationsmanifest"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Ingen applikation"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Ugyldigt indeks"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Ukendt applikation"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Kunne ikke sende anmodning til applikationen"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"Applikationen kører i forvejen"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Ugyldigt manifest"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"Applikationen var ugyldig"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Opstart af applikationen mislykkedes"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"Applikationen var allerede ved at starte"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"En anden applikation var allerede ved at starte"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"En anden applikation var allerede ved at afslutte"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"Opstart af applikationen blev afbrudt af brugeren"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"Denne applikation er en skabelon"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR er ved at afslutte"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"Den angivne buffer var for lille"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
+"VRApplicationError_PropertyNotSet"	"Egenskaben er ikke angivet"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Ukendt egenskab"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Ugyldig parameter"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>BEMÆRK:</b> Yderligere opdateringshastigheder understøttes af dit HMD, men de blev ikke registreret af grafikdriveren."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>BEMÆRK:</b> Yderligere opdateringshastigheder understøttes af din HMD, men SteamVR kan ikke administrere opdateringshastigheder, når HMD'en er i udvidet tilstand. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Slå direkte tilstand til.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 }
 }
