--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -245,8 +245,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"%1 kon niet worden gestart. De applicatie-interface is niet beschikbaar."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"Kon %1 niet starten. De fout was %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"Kon %1 niet starten: %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Versie %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Dit reset je complete systeem, maar alle bestanden hebben een back-up.\n\n- Alle instellingen van SteamVR worden verwijderd\n- De instellingen voor de runtime worden verwijderd\n- De kamerinstellingen worden verwijderd\n\nDe toepassing zal na de reset opnieuw starten!\n"
@@ -1373,7 +1373,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Gelukt!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Firmware van basisstation succesvol bijgewerkt. Je moet het basisstation mogelijk een keer uit- en aanzetten voordat het basisstation de firmwarestatus als bijgewerkt ziet."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Sommige weergaven worden gespiegeld (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Onbekende hardware gedetecteerd (0x2000)"
@@ -1974,5 +1974,15 @@
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
 "Monitor_RestartRequestedDialog_Title"	"Herstarten vereist"
 "[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
+"FirmwareWizard_ProgressPercentStarting"	"[ Starten... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Scannen... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"VRApplicationError_InvalidIndex"	"Ongeldige index"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_InvalidManifest"	"Ongeldig manifest"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR sluit af"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
 }
 }
