--- a/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
@@ -23,13 +23,13 @@
 "[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Preparação de cômodo"
 "[english]Error_NoChaperoneAvailable_Header"	"Room Setup"
-"Error_NoChaperoneAvailable_Description"	"Prepare o seu cômodo para que o SteamVR funcione corretamente."
+"Error_NoChaperoneAvailable_Description"	"Chegou a hora de configurar a sua área de jogo e os limites do espaço."
 "[english]Error_NoChaperoneAvailable_Description"	"Looks like it's time to configure your VR play area and chaperone boundaries."
 "Error_NoChaperoneAvailable_Action"	"Realizar preparação de cômodo"
 "[english]Error_NoChaperoneAvailable_Action"	"Perform Room Setup"
 "Error_CompositorNotFullscreen_Header"	"Erro do headset"
 "[english]Error_CompositorNotFullscreen_Header"	"Headset Error"
-"Error_CompositorNotFullscreen_Description"	"Isso precisará estar em tela cheia para que o SteamVR funcione corretamente."
+"Error_CompositorNotFullscreen_Description"	"Confirme que o visor do headset está no modo tela cheia."
 "[english]Error_CompositorNotFullscreen_Description"	"Make sure your headset's display is in fullscreen mode."
 "Error_CompositorNotFullscreen_Action"	"Ativar modo tela cheia"
 "[english]Error_CompositorNotFullscreen_Action"	"Enable fullscreen mode"
@@ -59,61 +59,61 @@
 "[english]Error_TrackingDevice_NotValid_Action"	"Reconnect"
 "Error_TrackingDevice_NoPose_Header"	"Buscando..."
 "[english]Error_TrackingDevice_NoPose_Header"	"Searching..."
-"Error_TrackingDevice_NoPose_Description"	"Esse dispositivo não está rastreando a posição. Confirme que ele é visível pelas estações base."
+"Error_TrackingDevice_NoPose_Description"	"Esse dispositivo não está sendo rastreado. Confirme que ele está no campo de visão de uma estação base."
 "[english]Error_TrackingDevice_NoPose_Description"	"This device is not tracking. Make sure it is in view of a base station."
 "Error_TrackingDevice_NoPose_Action"	"Mais informações"
 "[english]Error_TrackingDevice_NoPose_Action"	"More info"
 "VRInitError_Unknown_Header"	"Falha do SteamVR"
 "[english]VRInitError_Unknown_Header"	"SteamVR Fail"
-"VRInitError_Unknown_Description"	"Houve um problema inesperado. Por favor, consulte o suporte do SteamVR para ajuda."
+"VRInitError_Unknown_Description"	"Houve um problema inesperado com o SteamVR. Por favor, acesse o suporte do SteamVR para detalhes."
 "[english]VRInitError_Unknown_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Unknown_Action"	"Mais informações"
 "[english]VRInitError_Unknown_Action"	"More info"
 "VRInitError_Init_InstallationNotFound_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_InstallationNotFound_Header"	"SteamVR Fail"
-"VRInitError_Init_InstallationNotFound_Description"	"Alguns arquivos não estavam onde deveriam estar."
+"VRInitError_Init_InstallationNotFound_Description"	"Parece que alguns arquivos essenciais para o funcionamento sumiram."
 "[english]VRInitError_Init_InstallationNotFound_Description"	"We've discovered some essential files appear to be missing."
 "VRInitError_Init_InstallationNotFound_Action"	"Mais informações"
 "[english]VRInitError_Init_InstallationNotFound_Action"	"More info"
 "VRInitError_Init_InstallationCorrupt_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_InstallationCorrupt_Header"	"SteamVR Fail"
-"VRInitError_Init_InstallationCorrupt_Description"	"Alguns arquivos necessários para o SteamVR estão ausentes, verifique a instalação do SteamVR."
+"VRInitError_Init_InstallationCorrupt_Description"	"Parece que alguns arquivos essenciais para o funcionamento sumiram. Por favor, reinstale o SteamVR."
 "[english]VRInitError_Init_InstallationCorrupt_Description"	"We've discovered some essential files appear to be missing. Please reinstall SteamVR."
 "VRInitError_Init_InstallationCorrupt_Action"	"Mais informações"
 "[english]VRInitError_Init_InstallationCorrupt_Action"	"More info"
 "VRInitError_Init_VRClientDLLNotFound_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_VRClientDLLNotFound_Header"	"SteamVR Fail"
-"VRInitError_Init_VRClientDLLNotFound_Description"	"Um arquivo necessário para o SteamVR está ausente, verifique a instalação do SteamVR."
+"VRInitError_Init_VRClientDLLNotFound_Description"	"Parece que alguns arquivos essenciais para o funcionamento sumiram. Por favor, reinstale o SteamVR."
 "[english]VRInitError_Init_VRClientDLLNotFound_Description"	"We've discovered some essential files appear to be missing. Please reinstall SteamVR."
 "VRInitError_Init_VRClientDLLNotFound_Action"	"Mais informações"
 "[english]VRInitError_Init_VRClientDLLNotFound_Action"	"More info"
 "VRInitError_Init_FileNotFound_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_FileNotFound_Header"	"SteamVR Fail"
-"VRInitError_Init_FileNotFound_Description"	"Um arquivo necessário para o SteamVR está ausente, verifique a instalação do SteamVR."
+"VRInitError_Init_FileNotFound_Description"	"Parece que alguns arquivos essenciais para o funcionamento sumiram. Por favor, reinstale o SteamVR."
 "[english]VRInitError_Init_FileNotFound_Description"	"We've discovered some essential files appear to be missing. Please reinstall SteamVR."
 "VRInitError_Init_FileNotFound_Action"	"Mais informações"
 "[english]VRInitError_Init_FileNotFound_Action"	"More info"
 "VRInitError_Init_FactoryNotFound_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_FactoryNotFound_Header"	"SteamVR Fail"
-"VRInitError_Init_FactoryNotFound_Description"	"Um arquivo necessário para o SteamVR está ausente, verifique a instalação do SteamVR."
+"VRInitError_Init_FactoryNotFound_Description"	"Parece que alguns arquivos essenciais para o funcionamento sumiram. Por favor, reinstale o SteamVR."
 "[english]VRInitError_Init_FactoryNotFound_Description"	"We've discovered some essential files appear to be missing. Please reinstall SteamVR."
 "VRInitError_Init_FactoryNotFound_Action"	"Mais informações"
 "[english]VRInitError_Init_FactoryNotFound_Action"	"More info"
 "VRInitError_Init_InterfaceNotFound_Header"	"Atualização do SteamVR"
 "[english]VRInitError_Init_InterfaceNotFound_Header"	"SteamVR Update"
-"VRInitError_Init_InterfaceNotFound_Description"	"Essa versão do SteamVR é antiga demais, atualize para a versão mais recente pelo Steam."
+"VRInitError_Init_InterfaceNotFound_Description"	"Percebemos que o SteamVR precisa de uma atualização. Por favor, feche o SteamVR e acesse a seção de downloads do Steam para atualizá-lo."
 "[english]VRInitError_Init_InterfaceNotFound_Description"	"We've discovered SteamVR is in need of an update. Please quit SteamVR and visit Steam Downloads to update the app."
 "VRInitError_Init_InterfaceNotFound_Action"	" "
 "[english]VRInitError_Init_InterfaceNotFound_Action"	""
 "VRInitError_Init_InvalidInterface_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_InvalidInterface_Header"	"SteamVR Fail"
-"VRInitError_Init_InvalidInterface_Description"	"Houve um problema inesperado. Por favor, consulte o suporte do SteamVR para ajuda."
+"VRInitError_Init_InvalidInterface_Description"	"Houve um problema inesperado. Por favor, acesse o suporte do SteamVR para detalhes."
 "[english]VRInitError_Init_InvalidInterface_Description"	"We've encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_InvalidInterface_Action"	"Mais informações"
 "[english]VRInitError_Init_InvalidInterface_Action"	"More info"
 "VRInitError_Init_UserConfigDirectoryInvalid_Header"	"Erro do SteamVR"
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Header"	"SteamVR Error"
-"VRInitError_Init_UserConfigDirectoryInvalid_Description"	"Não achamos o seu diretório de configuração; precisaremos criar um novo."
+"VRInitError_Init_UserConfigDirectoryInvalid_Description"	"Percebemos um problema com a sua instalação do SteamVR. Por favor, localize o diretório de configurações do SteamVR."
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Description"	"We've discovered an error with your SteamVR installation. Please locate your SteamVR config directory."
 "VRInitError_Init_UserConfigDirectoryInvalid_Action"	"Criar diretório de configuração"
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Action"	"Set Config Directory"
@@ -125,37 +125,37 @@
 "[english]VRInitError_Init_HmdNotFound_Action"	"More info"
 "VRInitError_Init_NotInitialized_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_NotInitialized_Header"	"SteamVR Fail"
-"VRInitError_Init_NotInitialized_Description"	"Houve um problema inesperado. Por favor, consulte o suporte do SteamVR para ajuda."
+"VRInitError_Init_NotInitialized_Description"	"Houve um problema inesperado com o SteamVR. Por favor, acesse o suporte do SteamVR para detalhes."
 "[english]VRInitError_Init_NotInitialized_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_NotInitialized_Action"	"Mais informações"
 "[english]VRInitError_Init_NotInitialized_Action"	"More info"
 "VRInitError_Init_PathRegistryNotFound_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_PathRegistryNotFound_Header"	"SteamVR Fail"
-"VRInitError_Init_PathRegistryNotFound_Description"	"Alguns arquivos não estavam onde deveriam estar."
+"VRInitError_Init_PathRegistryNotFound_Description"	"Parece que alguns arquivos essenciais para o funcionamento sumiram. Por favor, tente novamente."
 "[english]VRInitError_Init_PathRegistryNotFound_Description"	"We've discovered some essential files appear to be missing. Please try again."
 "VRInitError_Init_PathRegistryNotFound_Action"	"Tentar novamente a partir do diretório atual"
 "[english]VRInitError_Init_PathRegistryNotFound_Action"	"Try again from the current directory"
 "VRInitError_Init_NoConfigPath_Header"	"Erro do SteamVR"
 "[english]VRInitError_Init_NoConfigPath_Header"	"SteamVR Error"
-"VRInitError_Init_NoConfigPath_Description"	"Não achamos o seu caminho de configuração; precisaremos criar um novo."
+"VRInitError_Init_NoConfigPath_Description"	"Percebemos um problema com a sua instalação do SteamVR. Por favor, localize o diretório de configurações do SteamVR."
 "[english]VRInitError_Init_NoConfigPath_Description"	"We've discovered an error with your SteamVR installation. Please locate your SteamVR config directory."
 "VRInitError_Init_NoConfigPath_Action"	"Definir diretório de configurações"
 "[english]VRInitError_Init_NoConfigPath_Action"	"Set Config Directory"
 "VRInitError_Init_NoLogPath_Header"	"Erro do SteamVR"
 "[english]VRInitError_Init_NoLogPath_Header"	"SteamVR Error"
-"VRInitError_Init_NoLogPath_Description"	"Não achamos o seu caminho de relatórios; precisaremos criar um novo."
+"VRInitError_Init_NoLogPath_Description"	"Percebemos um problema com a sua instalação do SteamVR. Por favor, localize o diretório de relatórios do SteamVR."
 "[english]VRInitError_Init_NoLogPath_Description"	"We've discovered an error with your SteamVR installation. Please locate your SteamVR log directory."
 "VRInitError_Init_NoLogPath_Action"	"Definir diretório de relatórios"
 "[english]VRInitError_Init_NoLogPath_Action"	"Set Log Directory"
 "VRInitError_Init_PathRegistryNotWritable_Header"	"Erro do SteamVR"
 "[english]VRInitError_Init_PathRegistryNotWritable_Header"	"SteamVR Error"
-"VRInitError_Init_PathRegistryNotWritable_Description"	"É necessário ter permissão de escrita do registro de caminho para que o SteamVR funcione corretamente."
+"VRInitError_Init_PathRegistryNotWritable_Description"	"Não foi possível salvar dados. Por favor, verifique as permissões do seu usuário neste computador."
 "[english]VRInitError_Init_PathRegistryNotWritable_Description"	"SteamVR is unable to save information. Please review your user permissions on this computer."
 "VRInitError_Init_PathRegistryNotWritable_Action"	"Mais informações"
 "[english]VRInitError_Init_PathRegistryNotWritable_Action"	"More info"
 "VRInitError_Init_AppInfoInitFailed_Header"	"Falha do SteamVR"
 "[english]VRInitError_Init_AppInfoInitFailed_Header"	"SteamVR Fail"
-"VRInitError_Init_AppInfoInitFailed_Description"	"Um componente interno do SteamVR não está funcionando corretamente. Por favor, consulte o suporte do SteamVR para ajuda."
+"VRInitError_Init_AppInfoInitFailed_Description"	"Um componente essencial do SteamVR não está funcionando corretamente. Por favor, acesse o suporte do SteamVR para detalhes."
 "[english]VRInitError_Init_AppInfoInitFailed_Description"	"A critical component of SteamVR isn't working properly. Please visit SteamVR Support for more info."
 "VRInitError_Init_AppInfoInitFailed_Action"	"Mais informações"
 "[english]VRInitError_Init_AppInfoInitFailed_Action"	"More info"
@@ -209,7 +209,7 @@
 "[english]VRInitError_Init_NotSupportedWithCompositor_Action"	"More info"
 "VRInitError_Driver_Failed_Header"	"Erro do SteamVR"
 "[english]VRInitError_Driver_Failed_Header"	"SteamVR Error"
-"VRInitError_Driver_Failed_Description"	"Houve um erro interno — clique no botão abaixo para mais informações."
+"VRInitError_Driver_Failed_Description"	"Houve um erro com o SteamVR. Por favor, verifique as permissões do seu usuário neste computador. Caso tenha adicionado algum arquivo à pasta de drivers do SteamVR manualmente, remova-o."
 "[english]VRInitError_Driver_Failed_Description"	"SteamVR has encountered an error. Please review your user permissions on this computer. Or, if you manually added something to the SteamVR drivers directory, remove it."
 "VRInitError_Driver_Failed_Action"	"Mais informações"
 "[english]VRInitError_Driver_Failed_Action"	"More info"
@@ -221,13 +221,13 @@
 "[english]VRInitError_Driver_Unknown_Action"	"Fix it!"
 "VRInitError_Driver_HmdUnknown_Header"	"Headset não reconhecido"
 "[english]VRInitError_Driver_HmdUnknown_Header"	"Headset not Recognized"
-"VRInitError_Driver_HmdUnknown_Description"	"Headset não reconhecido. Por favor, confirme que está usando um headset válido."
+"VRInitError_Driver_HmdUnknown_Description"	"O SteamVR não está conseguindo identificar este headset."
 "[english]VRInitError_Driver_HmdUnknown_Description"	"SteamVR is having difficulty identifying this headset."
 "VRInitError_Driver_HmdUnknown_Action"	"Corrigir!"
 "[english]VRInitError_Driver_HmdUnknown_Action"	"Fix it!"
 "VRInitError_Driver_NotLoaded_Header"	"Erro do SteamVR"
 "[english]VRInitError_Driver_NotLoaded_Header"	"SteamVR Error"
-"VRInitError_Driver_NotLoaded_Description"	"Um driver exigido pelo SteamVR não está carregando corretamente, verifique a instalação do SteamVR."
+"VRInitError_Driver_NotLoaded_Description"	"Um driver exigido pelo SteamVR não está carregando corretamente. Por favor, verifique a instalação do SteamVR."
 "[english]VRInitError_Driver_NotLoaded_Description"	"A driver required for SteamVR isn't loading correctly. Please check your SteamVR installation."
 "VRInitError_Driver_NotLoaded_Action"	"Mais informações"
 "[english]VRInitError_Driver_NotLoaded_Action"	"More info"
@@ -299,7 +299,7 @@
 "[english]VRInitError_IPC_Failed_Action"	"More info"
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"Erro do SteamVR"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"SteamVR Error"
-"VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Description"	"Não foi possível conectar o Steam VR ao runtime da Oculus. Por favor, tente novamente mais tarde."
+"VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Description"	"Não foi possível conectar o SteamVR ao aplicativo da Oculus. Por favor, confirme que a versão mais recente está instalada."
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Description"	"SteamVR was unable to connect to the Oculus app. Please make sure you have the latest version installed."
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Action"	"Acessar oculus.com"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Action"	"Visit oculus.com"
