--- a/content/vrmonitor/translations/vrmonitor_errors_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_french.txt
@@ -1187,7 +1187,7 @@
 "[english]Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Câble de connexion débranché au niveau du casque"
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Tether Disconnected at Headset"
-"Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Le câble de votre casque est débranché au niveau du casque. Veuillez vérifier que la connection derrière le joint de visage est bien enfoncée."
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Le câble de votre casque est débranché au niveau du casque. Veuillez vérifier que le câble derrière le coussin facial est bien en place."
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Your headset's cable has become disconnected at the headset. Please ensure the connection behind the face gasket is firmly seated."
 "Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"Plus d'informations"
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"More info"
@@ -1203,6 +1203,8 @@
 "[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Ordinateur portable : affichage du casque déconnecté"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Veuillez vous assurer que les câbles vidéo sont bien connectés à votre ordinateur portable. Les ordinateurs portables peuvent nécessiter une installation spéciale pour fonctionner avec la VR."
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Please make sure your video cables are securely connected to your laptop. Laptops may require special setup to work with VR."
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Réinitialiser le casque"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
