--- a/content/vrmonitor/translations/vrmonitor_errors_hungarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_hungarian.txt
@@ -258,7 +258,7 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Fejszettkijelző lecsatlakoztatva"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset Display Disconnected"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"A fejszett kijelzője nem található. Kérjük, biztosítsd a videókábelek stabil csatlakoztatását."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"Kérjük, biztosítsd a videókábelek stabil csatlakoztatását. A fejszett kijelzője nem található."
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Több infó"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
@@ -1215,5 +1215,17 @@
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
 "Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/hu/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Fejszettkijelző lecsatlakoztatva"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Kérjük, biztosítsd a videókábelek laptopodhoz való stabil csatlakoztatását. A laptopok speciális beállításokat igényelhetnek, hogy működjenek a VR-rel."
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Please make sure your video cables are securely connected to your laptop. Laptops may require special setup to work with VR."
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Fejszett újraindítása"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Több infó"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/hu/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 }
 }
