--- a/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
@@ -553,7 +553,7 @@
 "[english]Popover_FirmwareUpdateNeededWarning_Description"	"It's time to update this device."
 "Popover_FirmwareUpdateNeededWarning_Action"	"Sorun giderme"
 "[english]Popover_FirmwareUpdateNeededWarning_Action"	"More info"
-"Popover_FirmwareUpdateNeededWarning_Action_AutomaticUpdate"	"Güncelleme mevcut"
+"Popover_FirmwareUpdateNeededWarning_Action_AutomaticUpdate"	"Cihazı Güncelle"
 "[english]Popover_FirmwareUpdateNeededWarning_Action_AutomaticUpdate"	"Update device"
 "Popover_ConnectionRefusedBySteam_Header"	"Steam'e bağlanılamıyor"
 "[english]Popover_ConnectionRefusedBySteam_Header"	"Steam Error"
@@ -1197,5 +1197,33 @@
 "[english]Warning_DismissableWarning_Windows8_Action"	"More info"
 "Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/tr/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Başlığın Bağlantı Kablosu Çıktı"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Tether Disconnected at Headset"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Başlığınızın kablosu başlığınızdan çıktı. Lütfen yüz lastiğinin arkasındaki kablonun sıkıca bağlandığından emin olun."
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Your headset's cable has become disconnected at the headset. Please ensure the connection behind the face gasket is firmly seated."
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"Ayrıntılı bilgi"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"More info"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/tr/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_OutOfVideoMemory_Header"	"Yeterli Video Belleği Yok"
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Header"	"Out Of Video Memory"
+"Warning_DismissableWarning_OutOfVideoMemory_Description"	"Sisteminiz düşük video belleğinde çalışıyor. Bu da düşük performansa neden olabilir. Mevcut uygulamayı kapatmayı veya SteamVR'ı yeniden başlatmayı deneyin."
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Description"	"Your system is running low on video memory which will cause poor performance. Try exiting the current application, or restarting SteamVR."
+"Warning_DismissableWarning_OutOfVideoMemory_Action"	"Ayrıntılı bilgi"
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
+"Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/tr/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Dizüstü Bilgisayar: Başlığın Ekran Bağlantısı Kesildi"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Görüntü kablolarınızın dizüstü bilgisayarınıza güvenli bir şekilde bağlandığından emin olun. VR'ın dizüstü bilgisayarlarda çalışması için özel bir kurulum gerekebilir."
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Please make sure your video cables are securely connected to your laptop. Laptops may require special setup to work with VR."
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Başlığı Yeniden Başlat"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Ayrıntılı bilgi"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/tr/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 }
 }
