--- a/content/vrmonitor/translations/vrmonitor_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_german.txt
@@ -247,7 +247,7 @@
 "MonitorController_ApplicationsInterfaceNotAvailable"	"%1 konnte nicht gestartet werden. Das Interface der Anwendung ist nicht verfügbar."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
 "MonitorController_ApplicationCouldNotStart"	"%1 konnte nicht gestartet werden. Fehler: %2"
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Version %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Hierdurch wird Ihre Installation von SteamVR zurückgesetzt und die Anwendung neu gestartet."
@@ -857,7 +857,7 @@
 "[english]FirmwareWizard_Information_Title"	"Device Update"
 "FirmwareWizard_WizardIsAlreadyBusy_Message"	"Diese Aktualisierung kann derzeit nicht gestartet werden, da bereits eine Geräteaktualisierung durchgeführt wird."
 "[english]FirmwareWizard_WizardIsAlreadyBusy_Message"	"This update can not be started at this time, as there is already a device update in progress."
-"Settings_Camera_AllowCameraForRoomView"	"Kamera für Raumansicht zulassen (Systemtaste doppelt drücken)"
+"Settings_Camera_AllowCameraForRoomView"	"Raumansicht durch doppeltes Drücken der Systemtaste aktivieren"
 "[english]Settings_Camera_AllowCameraForRoomView"	"Enable Room View with System Button double-click"
 "FirmwareWizard_UpdateHeadset_Start_UpperText"	"
 "
@@ -1252,7 +1252,7 @@
 "[english]Settings_Audio_NoMirror"	"(Do not mirror)"
 "FirmwareWizard_CameraRecovery"	"Kameraupdate"
 "[english]FirmwareWizard_CameraRecovery"	"Camera Update"
-"NeedRoomSetupNoLaunch_Message"	"Diese Anwendung kann nicht ausgeführt werden, bis die Raumvermessung abgeschlossen wurde. Möchten Sie die Raumvermessung jetzt ausführen?"
+"NeedRoomSetupNoLaunch_Message"	"Diese Anwendung kann erst ausgeführt werden, bis die Raumvermessung abgeschlossen ist. Möchten Sie die Raumvermessung jetzt ausführen?"
 "[english]NeedRoomSetupNoLaunch_Message"	"This application cannot run until you've performed Room Setup. Would you like to perform Room Setup now?"
 "SystemReport_Data"	"Daten"
 "[english]SystemReport_Data"	"Data"
@@ -1352,7 +1352,7 @@
 "[english]WorkshopUpload_Error_InvalidType_Thumbnail"	"Thumbnail images must be either png or jpg files"
 "WorkshopUpload_Error_InvalidType_MainFile"	"Hintergrundbilder müssen .png- oder .jpg-Dateien sein"
 "[english]WorkshopUpload_Error_InvalidType_MainFile"	"Background images must be either png or jpg files"
-"WorkshopUpload_Error_LimitExceeded"	"Steam meldete den Fehler \"Limit überschritten\". Bitte vergewissern Sie sich, dass das Vorschaubild kleiner als 1 MB ist."
+"WorkshopUpload_Error_LimitExceeded"	"Steam-Fehler \"Limit überschritten\". Bitte vergewissern Sie sich, dass das Vorschaubild kleiner als 1 MB ist."
 "[english]WorkshopUpload_Error_LimitExceeded"	"Steam Error \"Limit Exceeded.\" Please ensure that the thumbnail is smaller than 1 MB."
 "WorkshopUpload_Error_CannotCreateUploadDir"	"Beim Erstellen des temporären Uploadpfads ist ein Fehler aufgetreten!"
 "[english]WorkshopUpload_Error_CannotCreateUploadDir"	"Failed to create temporary upload directory!"
@@ -1378,27 +1378,27 @@
 "[english]MenuAction_WakeupAllBaseStations"	"Wake Up Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"Eine Komponente Ihrer Hardware benötigt eine Geräteaktualisierung, damit das System wieder funktionsfähig ist.\n\nMöchten Sie fortfahren?"
 "[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a device update to restore it to an operational state.\n\nWould you like to continue?"
-"FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmwareupdate der Basisstation fehlgeschlagen"
+"FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Aktualisierung der Basisstation fehlgeschlagen"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Diese Geräteaktualisierung ist fehlgeschlagen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Sollte dies weiterhin fehlschlagen, schließen Sie SteamVR und starten Sie die Verbindungsbox und die Basisstation neu. Starten Sie dann SteamVR und versuchen Sie es erneut."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Sollte diese Geräteaktualisierung weiterhin fehlschlagen, schließen Sie SteamVR und trennen Sie die Verbindungsbox sowie die Basisstation kurzzeitig vom Strom. Starten Sie dann SteamVR und versuchen Sie es erneut."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Klicken Sie unten auf \"Erneut versuchen\", um es erneut zu versuchen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
-"FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Firmware der Basisstation aktualisieren"
+"FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Basisstation aktualisieren"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Erfolgreich!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
-"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Firmware der Basisstation erfolgreich aktualisiert. Sie müssen Ihre Basisstation eventuell neu starten, damit die Firmware als aktualisiert erkannt wird."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Basisstation erfolgreich aktualisiert. Sie müssen die Basisstation gegebenenfalls kurzzeitig vom Strom trennen, bevor die Aktualisierung erkannt wird."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Einige Anzeigen werden gespiegelt (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Unbekannte Hardware erkannt (0x2000)"
 "[english]DismissableWarning_UnknownHardwareDetected"	"Unknown Hardware Detected (0x2000)"
 "DismissableWarning_WindowsAeroDisabled"	"Windows Aero deaktiviert (0x4000)"
 "[english]DismissableWarning_WindowsAeroDisabled"	"Windows Aero disabled (0x4000)"
-"Settings_UseBluetoothLink_Text"	"Bluetoothkommunikation aktivieren"
+"Settings_UseBluetoothLink_Text"	"Bluetooth aktivieren"
 "[english]Settings_UseBluetoothLink_Text"	"Enable Bluetooth"
 "Settings_UseBluetoothLink_Info"	"Wenn dies aktiviert ist, können Basisstationen drahtlos neu gestartet und aktualisiert werden. Bei einigen VR-Headsets ermöglicht dies außerdem weitere Zusatzfunktionen."
 "[english]Settings_UseBluetoothLink_Info"	"Access wireless base station power management and device updates with Bluetooth. This may also enable additional features for some VR devices."
@@ -2013,6 +2013,12 @@
 "[english]Settings_Advanced_SupersamplingManualOverride"	"Enable custom resolution"
 "Explanation_Supersampling_Header"	"SteamVR legt die Auflösung Ihrer Anwendung automatisch basierend auf der Leistung Ihrer GPU fest."
 "[english]Explanation_Supersampling_Header"	"SteamVR automatically sets your application resolution based on the performance of your GPU."
+"Settings_PerApplication_Header"	"Nutzen Sie diese Optionen, um Ihre eigenen Einstellungen für Anwendungen festzulegen"
+"[english]Settings_PerApplication_Header"	"Use these options to create unique settings per application"
+"Settings_PerApplication_AppResTitle"	"Benutzerdefinierte Auflösung"
+"[english]Settings_PerApplication_AppResTitle"	"Custom Resolution"
+"Settings_PerApplication_AppResHeader"	"Diese Einstellung ist ein Multiplikator zusätzlich zu Ihrer eingestellten Videoauflösung für Anwendungen. Diese Anwendung muss gegebenenfalls neu gestartet werden, damit die Einstellungen übernommen werden. (Standardeinstellung: 100 %)"
+"[english]Settings_PerApplication_AppResHeader"	"This setting is a multiplier on top of your Video Application Resolution settings. This application may need to be restarted for settings to take effect. (Default is 100%)"
 "Settings_PerApplication_AppResFooter"	"Die derzeitige Einstellung rendert jedes Auge mit <font color=#eeeeee>%1×%2</font>"
 "[english]Settings_PerApplication_AppResFooter"	"The current setting renders each eye at <font color=#eeeeee>%1x%2</font>"
 "Settings_PerApplication_OverlayVisibleHeader"	"Overlay-Anwendungen sind als Reiter im SteamVR-Dashboard verfügbar."
@@ -2125,14 +2131,22 @@
 "[english]Settings_BaseStation_OpenSettingsBluetooth"	"View Bluetooth Settings"
 "Settings_BaseStation_PowerManagement"	"Energieverwaltung"
 "[english]Settings_BaseStation_PowerManagement"	"Power Management"
+"Settings_BaseStation_PowerManagement_Explanation"	"Wecken Sie Basisstationen und versetzen Sie sie in den Stand-by-Modus, je nachdem, wie Sie SteamVR verwenden."
+"[english]Settings_BaseStation_PowerManagement_Explanation"	"Wake up and set base stations into Standby mode based on your use of SteamVR."
 "Settings_BaseStation_ScanForBaseStations"	"Nach Basisstationen suchen"
 "[english]Settings_BaseStation_ScanForBaseStations"	"Scan For Base Stations"
+"Settings_BaseStation_ScanForBaseStations_Explanation"	"Finden Sie vertraute Basisstationen, die ihre Präsenz per Bluetooth übertragen."
+"[english]Settings_BaseStation_ScanForBaseStations_Explanation"	"Discover familiar base stations which are broadcasting their Bluetooth presence."
 "Settings_BaseStation_ConfigureBaseStations"	"Kanäle der Basisstation konfigurieren"
 "[english]Settings_BaseStation_ConfigureBaseStations"	"Configure Base Station Channels"
+"Settings_BaseStation_ConfigureBaseStations_Explanation"	"Finden Sie Basisstationen und konfigurieren Sie deren Kanäle, um Konflikte zu vermeiden."
+"[english]Settings_BaseStation_ConfigureBaseStations_Explanation"	"Discover base stations and configure their channels to avoid conflicts."
 "Settings_BaseStation_BaseStation10"	"Basisstation 1.0"
 "[english]Settings_BaseStation_BaseStation10"	"Base Station 1.0"
 "Settings_BaseStation_BaseStation20"	"Basisstation 2.0"
 "[english]Settings_BaseStation_BaseStation20"	"Base Station 2.0"
+"Settings_Advanced_MotionReprojection_Description"	"Falls die laufende Anwendung Probleme mit der Bildfrequenz hat, synthetisiert SteamVR neue Frames und gewährleistet so ein gutes Spielerlebnis."
+"[english]Settings_Advanced_MotionReprojection_Description"	"SteamVR synthesizes new frames to maintain a good experience when the running application cannot make framerate."
 "Settings_PerApplication_MotionReprojection_On"	"An"
 "[english]Settings_PerApplication_MotionReprojection_On"	"On"
 "Settings_PerApplication_MotionReprojection_Off"	"Aus"
@@ -2149,6 +2163,8 @@
 "[english]MessageBox_RefreshAll"	"Refresh All"
 "BS20_ConfigureChannel_ProgressCancelling"	"\nAktuelle Operation abbrechen...\n"
 "[english]BS20_ConfigureChannel_ProgressCancelling"	"\nCancelling...\n"
+"BS_PowerManagement_Title"	"Energieverwaltung für Basisstation"
+"[english]BS_PowerManagement_Title"	"Base Station Power Management"
 "BS_PowerManagement_Enable"	"Energieverwaltung aktivieren *"
 "[english]BS_PowerManagement_Enable"	"Enable Power Management *"
 "BS_PowerManagement_RefreshLink"	"Aktualisieren"
@@ -2209,6 +2225,8 @@
 "[english]MenuAction_LegacySettings"	"Developer Settings"
 "MenuAction_Developer"	"Entwickler"
 "[english]MenuAction_Developer"	"Developer"
+"MenuAction_WebDevTools"	"Webentwicklertools"
+"[english]MenuAction_WebDevTools"	"Web Dev Tools"
 "MenuAction_WebConsole"	"Webkonsole"
 "[english]MenuAction_WebConsole"	"Web Console"
 "MessageBox_OpenWirelessSettings"	"Bluetootheinstellungen"
@@ -2225,11 +2243,15 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Geräteaktualisierung"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Sichtbar in dieser Erfassungssitzung"
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
+"BS20_ConfigureChannel_ObservedInTracking"	"In einer vorigen Erfassungssitzung geortet"
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
 "BS20_ConfigureChannel_Identify"	"Klicken, um Basisstation zu identifizieren"
 "[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 benötigt eine Geräteaktualisierung, um identifiziert werden zu können."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
-"BS_PowerManagement_VisibleNowInTracking"	"Sichtbar"
+"BS_PowerManagement_VisibleNowInTracking"	"Sichtbar in dieser Erfassungssitzung"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
 "Monitor_RestartRequestedDialog_Title"	"Neustart erforderlich"
 "[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
@@ -2241,17 +2263,47 @@
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"SteamVR beenden"
 "[english]Monitor_RestartRequestedDialog_Quit"	"Quit SteamVR"
+"WorkshopUpload_Error_SteamClientNotFound"	"Das Upload-Tool des SteamVR-Workshops kann nicht gestartet werden, da der Steam-Client nicht ausgeführt wird."
+"[english]WorkshopUpload_Error_SteamClientNotFound"	"Cannot start the SteamVR Workshop Uploader because the Steam Client is not running."
 "BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 benötigt eine Geräteaktualisierung, um die Kanalkonfiguration zu aktivieren."
 "[english]BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 requires a device update to enable channel configuration."
+"BS20_ConfigureChannel_ProgressConnecting"	"\nVerbindung zu Basisstationen wird aufgebaut...\n"
+"[english]BS20_ConfigureChannel_ProgressConnecting"	"\nConnecting To Base Stations...\n"
+"Settings_DoNotFadeToGrid"	"Kein Raster anzeigen, wenn die Anwendung nicht mehr reagiert"
+"[english]Settings_DoNotFadeToGrid"	"Do not fade to grid when app hangs"
 "Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Bewegungsglättung wird von älteren Windows-Versionen nicht unterstützt."
 "[english]Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Motion Smoothing is not supported on older versions of Windows."
 "Settings_Advanced_RefreshRate_Header"	"Bildwiederholfrequenz"
 "[english]Settings_Advanced_RefreshRate_Header"	"Refresh Rate"
 "Settings_Advanced_RefreshRate_HzSuffix"	"Hz"
 "[english]Settings_Advanced_RefreshRate_HzSuffix"	"hz"
+"Settings_Advanced_Restart"	"<i>Ausstehende Änderung wird nach <a href='vrmonitor://restartsystem'><span style='color:white;'>Neustart von SteamVR</span></a></i> übernommen."
+"[english]Settings_Advanced_Restart"	"<i>This pending change will take effect once you <a href='vrmonitor://restartsystem'><span style='color:white;'>Restart SteamVR</span></a></i>"
+"BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NICHT EMPFOHLEN, wenn Sie den erfassten Bereich mit mehreren SteamVR-Nutzern teilen.</font>"
+"[english]BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PowerManagement_ObservedInTracking"	"In einer vorigen Erfassungssitzung geortet"
+"[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"Verbindung zu %1 konnte nicht hergestellt werden. Klicken Sie auf \"Aktualisieren\", um es erneut zu versuchen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Basisstationen werden aufgeweckt..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"BS20_UpdateRecovery_UpdateDevice"	"Gerät aktualisieren"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Kein Fehler"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_NoApplication"	"Keine Anwendung"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Ungültiger Index"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Unbekannte Anwendung"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_InvalidManifest"	"Ungültiges Manifest"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"Anwendung war ungültig"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_UnknownProperty"	"Unbekannte Eigenschaft"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Ungültiger Parameter"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
 }
 }
