--- a/content/vrmonitor/translations/vrmonitor_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_greek.txt
@@ -246,8 +246,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"Αδυναμία εκκίνησης του %1. Η διεπαφή της εφαρμογής δεν είναι διαθέσιμη."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"Αδύνατη η εκκίνηση του %1. Το σφάλμα ήταν %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"Αδυναμία εκκίνησης %1: %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Έκδοση %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Αυτό θα επαναφέρει τελείως την εγκατάσταση του SteamVR και θα επανεκκινήσει την εφαρμογή."
@@ -401,9 +401,9 @@
 "[english]Main_JumplistEntry_Quit"	"Quit"
 "Main_RuntimeFailed_Message"	"Αδυναμία εκκίνησης runtime.\n\n%1\n\nΜπορείτε να επαναφέρετε το τρέχον ορισμένο runtime\n%2\nμε βάση τη διαδρομή εκτελέσιμου του SteamVR\n%3\n"
 "[english]Main_RuntimeFailed_Message"	"The runtime was not able to start.\n\n%1\n\nYou can reset the current set runtime\n%2\nbased on the executable path of SteamVR\n%3\n"
-"VRManifest_Imported_Title"	"Έγινε εισαγωγή αρχείου OpenVR Manifest"
+"VRManifest_Imported_Title"	"Έγινε εισαγωγή δηλωτικού αρχείου OpenVR"
 "[english]VRManifest_Imported_Title"	"OpenVR Manifest file imported"
-"VRManifest_Imported_Message"	"Έγινε εισαγωγή αρχείου OpenVR Manifest: \n %1"
+"VRManifest_Imported_Message"	"Έγινε εισαγωγή δηλωτικού αρχείου OpenVR: \n %1"
 "[english]VRManifest_Imported_Message"	"OpenVR Manifest file imported: \n  %1"
 "MenuAction_Compositor_ShowMirror"	"Εμφάνιση προβολής VR"
 "[english]MenuAction_Compositor_ShowMirror"	"Show VR View"
@@ -1383,7 +1383,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Επιτυχία!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Ο σταθμός βάσης ενημερώθηκε επιτυχώς. Ίσως χρειαστεί να αποσυνδέσετε και έπειτα να συνδέσετε ξανά το καλώδιο τροφοδοσίας του σταθμού βάσης σας για να καταχωρηθεί ως ενημερωμένο."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Κάποιες οθόνες κατοπτρίζουν (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Εντοπίστηκε άγνωστο υλισμικό (0x2000)"
@@ -2314,9 +2314,87 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"Το %1 απέτυχε να συνδεθεί. Πατήστε «Ανανέωση» για να προσπαθήσετε ξανά."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Αφύπνιση σταθμών βάσης..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
-"Monitor_PuttingBaseStationsInStandby"	"Αναστολή λειτουργίας σταθμών βάσης..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"Monitor_WakingBaseStations"	"Ενεργοποίηση σταθμών βάσης..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby"	"Απενεργοποίηση σταθμών βάσης..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Ανάκτηση από ημιτελή ενημέρωση"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Διορθώστε μια διακεκομμένη ή ακυρωμένη ενημέρωση σταθμού βάσης που τον αποτρέπει από το να ανιχνεύσει κανονικά."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Αυτός ο σταθμός βάσης χρειάζεται να ανακαλυφθεί ξανά οπτικά από μια επανεκκίνηση του SteamVR πριν μπορέσει να συνεχίσει η ενημέρωση."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Αυτός ο σταθμός βάσης χρειάζεται να τερματίσει, να εκκινήσει ξανά και να ανακαλυφθεί οπτικά από μια επανεκκίνηση του SteamVR πριν μπορέσει να συνεχίσει η ενημέρωση. Παρακαλούμε αποσυνδέστε και έπειτα συνδέστε ξανά το καλώδιο ρεύματος του σταθμού βάσης."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Αυτός ο σταθμός βάσης έχει μια νεότερη έκδοση της ενημέρωσης και την έχει απορρίψει."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Πατήστε «Επανάληψη» παρακάτω για να προσπαθήσετε ξανά."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Πατήστε «Άκυρο» παρακάτω για να επανεκκινήσετε το SteamVR."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Εκκίνηση... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Σάρωση... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Ανάκτηση ενημέρωσης σταθμού βάσης 2.0"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Σάρωση για σταθμούς βάσης...\n\nΑπομένουν %1 δευτερόλεπτα."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Σάρωση για σταθμούς βάσης...\n\nΑνολοκλήρωτη."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Η σάρωση ολοκληρώθηκε.<br><br><font color=#ffffff><b>Ανακαλύφθηκε ένας σταθμός βάσης με μια ημιτελή ενημέρωση που τον αποτρέπει από το να λειτουργήσει κανονικά.</b></font><br><br>Πατήστε «Ενημέρωση συσκευής» παρακάτω για να συνεχίσετε την ενημέρωση."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Η σάρωση ολοκληρώθηκε.\n\nΔεν υπάρχουν σταθμοί βάσης που μεταδίδουν και χρειάζονται ανάκτηση εντός εμβέλειας."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Σάρωση ξανά"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Ενημέρωση συσκευής"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Χωρίς σφάλμα"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Η εφαρμογή είναι ήδη εγγεγραμμένη"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Χωρίς δηλωτικό εφαρμογής"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Χωρίς εφαρμογή"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Μη έγκυρος δείκτης"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Άγνωστη εφαρμογή"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Αδυναμία αίτησης εφαρμογής"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"Η εφαρμογή τρέχει ήδη"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Μη έγκυρο δηλωτικό"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"Η εφαρμογή δεν ήταν έγκυρη"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Η εκκίνηση της εφαρμογής απέτυχε"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"Η εφαρμογή εκκινούσε ήδη"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"Μια άλλη εφαρμογή εκκινούσε ήδη"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"Μια άλλη εφαρμογή τερμάτιζε ήδη"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"Η εκκίνηση εφαρμογής ακυρώθηκε από χρήστη"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"Αυτή είναι μια πρότυπη εφαρμογή"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
+"VRApplicationError_SteamVRIsExiting"	"Το SteamVR τερματίζει"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"Η παρεχόμενη ενδιάμεση μνήμη ήταν πολύ μικρή"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
+"VRApplicationError_PropertyNotSet"	"Η ιδιότητα δεν ορίστηκε"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Άγνωστη ιδιότητα"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Μη έγκυρη παράμετρος"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>ΣΗΜΕΙΩΣΗ:</b> Υποστηρίζονται πρόσθετοι ρυθμοί ανανέωσης από την οθόνη του headset σας, αλλά δεν εντοπίστηκαν από τον οδηγό της κάρτας γραφικών σας."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ΣΗΜΕΙΩΣΗ:</b> Υποστηρίζονται πρόσθετοι ρυθμοί ανανέωσης από την οθόνη του headset σας, αλλά το SteamVR δεν μπορεί να διαχειριστεί ρυθμούς ανανέωσης όταν οι οθόνες του headset είναι σε εκτεταμένη λειτουργία. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ενεργοποίηση άμεσης λειτουργίας.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 }
 }
