--- a/content/vrmonitor/translations/vrmonitor_hungarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_hungarian.txt
@@ -246,8 +246,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"A(z) %1 nem indítható. Az alkalmazás interfésze nem elérhető."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"A(z) %1 nem indítható. A hiba %2 volt."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"A(z) %1 nem indítható: %2"
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Verzió: %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Ez teljesen alaphelyzetbe fogja állítani SteamVR telepítésedet és újraindítja az alkalmazást."
@@ -1395,7 +1395,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Siker!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Bázisállomás sikeresen frissítve. Lehet, hogy ki kell húznod, majd visszadugnod bázisállomásod tápkábelét, hogy frissítettnek látsszon."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Néhány kijelző tükrözve van (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Ismeretlen hardver észlelve (0x2000)"
@@ -2331,9 +2331,87 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 nem tudott csatlakozni. Az újrapróbáláshoz kattints a Frissítésre."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Bázisállomások ébresztése..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
-"Monitor_PuttingBaseStationsInStandby"	"A bázisállomások készenlétbe kapcsolnak..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"Monitor_WakingBaseStations"	"A bázisállomások bekapcsolnak..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby"	"A bázisállomások kikapcsolnak..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Visszaállítás befejezetlen frissítésből"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Korábban megszakított vagy törölt, a normál követést akadályozó bázisállomás-frissítés javítása."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"A frissítés folytatásához ezt a bázisállomást a SteamVR újraindításával optikai úton újra kell azonosítani."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"A frissítés folytatásához ezt a bázisállomást ki- és be kell kapcsolni, majd a SteamVR újraindításával optikai úton újra kell azonosítani. Kérjük, húzd ki és dugd vissza a bázisállomás tápkábelét."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Ennek a bázisállomásnak újabb verziója van a frissítésből, és visszautasította azt."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Kattints alább az „Újra” gombra az újrapróbáláshoz."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Kattints alább a „Mégse” gombra a SteamVR újraindításához."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Indítás... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Keresés... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Bázisállomás 2.0 frissítés-helyreállító"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Bázisállomások keresése...\n\n%1 másodperc van hátra."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Bázisállomások keresése...\n\nBefejezetlen."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Keresés befejezve.<br><br><font color=#ffffff><b>Egy, a megfelelő működést gátló befejezetlen frissítéssel rendelkező bázisállomást észleltünk.</b></font><br><br>A frissítés folytatásához kattints alább az „Eszközfrissítésre”."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Keresés befejezve.\n\nNincsenek helyreállításra szoruló bázisállomások a közelben."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Újrakeresés"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Eszközfrissítés"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Nincs hiba"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Az alkalmazás már regisztrált"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Nincs alkalmazás-tanúsítvány"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Nincs alkalmazás"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Érvénytelen index"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Ismeretlen alkalmazás"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Nem sikerült az alkalmazás kérése"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"Az alkalmazás már fut"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Érvénytelen tanúsítvány"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"Az alkalmazás érvénytelen volt"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Az alkalmazásindítás nem sikerült"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"Az alkalmazás már indult"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"Egy másik alkalmazás már indult"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"Egy másik alkalmazás már kilépésben volt"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"Az alkalmazásindítást a felhasználó megszakította"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"Ez egy sablonalkalmazás"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
+"VRApplicationError_SteamVRIsExiting"	"A SteamVR épp kilép"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"A megadott puffer túl kicsi volt"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
+"VRApplicationError_PropertyNotSet"	"A tulajdonság nem volt beállítva"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Ismeretlen tulajdonság"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Érvénytelen paraméter"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>MEGJEGYZÉS:</b> HMD-d további képfrissítési frekvenciákat is támogat, de ezeket nem észlelete a grafikus illesztőprogram."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>MEGJEGYZÉS:</b> HMD-d további képfrissítési frekvenciákat is támogat, de a SteamVR nem tudja kezelni a képfrissítési frekvenciákat, amikor a HMD kiterjesztett módban van. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Közvetlen mód engedélyezése.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 }
 }
