--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -246,8 +246,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"Impossibile avviare %1. L'interfaccia di questa applicazione non è disponibile."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"Impossibile avviare %1. Errore: %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"Impossibile avviare %1: %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Versione %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Quest'operazione ripristinerà completamente la tua installazione di SteamVR e riavvierà l'applicazione."
@@ -1383,7 +1383,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Ha funzionato!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Stazione di base aggiornata correttamente. Potrebbe essere necessario scollegare e ricollegare il cavo dell'alimentazione della stazione di base prima che l'aggiornamento diventi effettivo."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Alcuni schermi si stanno duplicando (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Hardware sconosciuto rilevato (0x2000)"
@@ -2314,9 +2314,87 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"%1: connessione fallita. Clicca 'Aggiorna' per riprovare."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Uscita stazioni di base dalla modalità standby..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
-"Monitor_PuttingBaseStationsInStandby"	"Ingresso stazioni di base in modalità standby..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"Monitor_WakingBaseStations"	"Accensione stazioni di base..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby"	"Spegnimento stazioni di base..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Riprendi da un aggiornamento incompleto"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Correggi un aggiornamento della stazione di base interrotto o annullato che impedisce il normale tracciamento."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Questa stazione di base deve essere rilevata otticamente da un riavvio di SteamVR prima che l'aggiornamento possa procedere."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Prima di procedere all'aggiornamento, questa stazione di base deve essere riaccesa e rilevata otticamente tramite un riavvio di SteamVR. Si prega di scollegare e quindi ricollegare il cavo di alimentazione della stazione di base."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Questa stazione di base ha rifiutato l'aggiornamento alla versione più recente."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Clicca su 'Riprova' per tentare di nuovo."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Clicca su 'Annulla' per riavviare SteamVR."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Avvio... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Scansione... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Recupero aggiornamento stazione di base 2.0"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Ricerca stazioni di base...\n\n%1 secondi rimanenti."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Ricerca stazioni di base...\n\nIncompleta."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Ricerca completata.<br><br><font color=#ffffff><b>È stata rilevata una stazione di base malfuzionante a causa di un aggiornamento incompleto.</b></font><br><br>Clicca su \"Aggiorna dispositivo\" qui sotto per proseguire con l'aggiornamento."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Scansione completata.\n\nNessuna stazione di base attiva nelle vicinanze richiede un ripristino."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Scansiona di nuovo"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Aggiorna dispositivo"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Nessun errore"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"L'applicazione è già registrata"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Nessun manifesto dell'applicazione"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Nessuna applicazione"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Indice non valido"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Applicazione sconosciuta"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Impossibile richiedere l'applicazione"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"L'applicazione è già stata avviata"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Manifesto non valido"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"L'applicazione non era valida"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Impossibile avviare l'applicazione"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"L'applicazione si stava già avviando"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"Un'altra applicazione si stava già avviando"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"Un'altra applicazione si stava già chiudendo"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"Avvio dell'applicazione interrotto dall'utente"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"Questo è un modello di applicazione"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
+"VRApplicationError_SteamVRIsExiting"	"Chiusura di SteamVR"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"Il buffer fornito era troppo piccolo"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
+"VRApplicationError_PropertyNotSet"	"Proprietà non impostata"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Proprietà sconosciuta"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Parametro non valido"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>NOTA:</b> il tuo visore supporta frequenze di aggiornamento aggiuntive, ma il tuo driver grafico non le ha rilevate."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTA:</b> il tuo visore supporta frequenze di aggiornamento aggiuntive, ma SteamVR non può gestirle quando il visore è in modalità estesa. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Abilita la modalità diretta.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 }
 }
