--- a/content/vrmonitor/translations/vrmonitor_korean.txt
+++ b/content/vrmonitor/translations/vrmonitor_korean.txt
@@ -246,7 +246,7 @@
 "MonitorController_ApplicationsInterfaceNotAvailable"	"%1 를(을) 시작할 수 없습니다. 어플리케이션 인터페이스를 사용할 수 없습니다."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
 "MonitorController_ApplicationCouldNotStart"	"%1 시작 불가. 오류: %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"버전 %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"이것은 시스템 전체를 초기화하지만 제거된 모든 파일은 백업 사본을 가질 것입니다.\n\n- SteamVR의 모든 설정이 삭제됩니다\n- 런타임 설정이 삭제 됩니다\n- 방 설정 데이터가 삭제됩니다\n\n초기화가 끝나면 애플리케이션이 다시 시작됩니다!\n"
@@ -1378,7 +1378,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"성공!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"베이스 스테이션 펌웨어가 업데이트되었습니다. 펌웨어가 업데이트된 상태로 인식되려면 베이스 스테이션의 전원을 껐다가 다시 켜야 할 수 있습니다."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"몇 몇 디스플레이 복제 중 (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"알 수 없는 하드웨어 감지 (0x2000)"
