--- a/content/vrmonitor/translations/vrmonitor_latam.txt
+++ b/content/vrmonitor/translations/vrmonitor_latam.txt
@@ -246,7 +246,7 @@
 "MonitorController_ApplicationsInterfaceNotAvailable"	"No se ha podido iniciar %1. La interfaz de esta aplicación no está disponible."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
 "MonitorController_ApplicationCouldNotStart"	"No se ha podido iniciar %1. Error: %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Versión %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Esto restablecerá por completo tu instalación de SteamVR y reiniciará la aplicación."
@@ -1378,7 +1378,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"¡Hecho!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"La estación base se actualizó correctamente. Puede que tengas que desconectar y volver a conectar el cable de corriente de la estación base para que se detecte la actualización."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Algunas pantallas están duplicadas (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Hardware desconocido detectado (0x2000)"
