--- a/content/vrmonitor/translations/vrmonitor_norwegian.txt
+++ b/content/vrmonitor/translations/vrmonitor_norwegian.txt
@@ -245,8 +245,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"Kunne ikke starte %1. Programmets grensesnitt er ikke tilgjengelig."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"Kunne ikke starte %1. Feil: %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"Kunne ikke starte %1: %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Versjon %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Dette vil fullstendig tilbakestille installasjonen av SteamVR og starte programmet på nytt."
@@ -1386,7 +1386,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Vellykket!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Basestasjonen ble oppdatert. Du må kanskje koble ut og inn igjen basestasjonens strømkabel, før den registreres som oppdatert."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Noen skjermer bruker speiling (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Ukjent maskinvare oppdaget (0x2000)"
@@ -2320,9 +2320,87 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 kunne ikke opprette en forbindelse. Trykk «Oppdater» for å prøve igjen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Vekker basestasjoner..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
-"Monitor_PuttingBaseStationsInStandby"	"Basestasjoner går i ventemodus..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"Monitor_WakingBaseStations"	"Basestasjoner starter opp..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby"	"Basestasjoner slås av..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Gjenopprett fra en ufullstendig oppdatering"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Reparer en avbrutt oppdatering, som forhindrer basestasjonen fra å spore normalt."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Denne basestasjonen må oppdages igjen optisk ved å starte SteamVR på nytt, før oppdateringen kan fortsette."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Denne basestasjonen må startes på nytt og oppdages igjen optisk ved å starte SteamVR på nytt, før oppdateringen kan fortsette. Koble ut og inn igjen støpselet til basestasjonen."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Denne basestasjonen har en nyere versjon av oppdateringen og har avvist den."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Trykk «Prøv på nytt» nedenfor for å prøve igjen."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Trykk «Avbryt» nedenfor for å starte SteamVR på nytt."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Starter... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Skanner... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Gjenoppretting av oppdatering til basestasjon 2.0"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Skanner etter basestasjoner...\n\n%1 sekunder igjen."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Skanner etter basestasjoner...\n\nIkke fullført."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Skann fullført.<br><br><font color=#ffffff><b>Det ble oppdaget en basestasjon med en ufullstendig oppdatering, som forhindrer den fra å fungere normalt.</b></font><br><br>Trykk «Oppdater enhet» nedenfor for å fortsette oppdateringen."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Skann fullført.\n\nDet er ingen basestasjoner i nærheten, som kringkaster og trenger gjenoppretting."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Skann på nytt"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Oppdater enhet"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Ingen feil"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Programmet er allerede registrert"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Intet programmanifest"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Intet program"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Ugyldig indeks"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Ukjent program"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Kan ikke be om program"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"Programmet kjører allerede"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Ugyldig manifest"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"Programmet var ugyldig"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Programoppstart mislyktes"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"Programmet skulle allerede starte opp"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"Et annet program skulle allerede starte opp"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"Et annet program skulle allerede avslutte"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"Programoppstart ble avbrutt av bruker"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"Dette er en programmal"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR skal avsluttes"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"Angitt buffer var for liten"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
+"VRApplicationError_PropertyNotSet"	"Egenskap ble ikke angitt"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Ukjent egenskap"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Ugyldig parameter"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>MERK:</b> Ytterligere oppdateringsfrekvenser støttes av hodesettet, men de ble ikke registrert av skjermdriveren."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>MERK:</b> Ytterligere oppdateringsfrekvenser støttes av hodesettet, men SteamVR kan ikke behandle oppdateringsfrekvenser når hodesettet er i utvidet modus. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Slå på direkte skjermmodus.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 }
 }
