--- a/content/vrmonitor/translations/vrmonitor_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_russian.txt
@@ -245,8 +245,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"Не удалось запустить %1. Интерфейс этого приложения недоступен."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"Не удалось запустить %1. Ошибка %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"Не удалось запустить %1: %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Версия %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Это действие полностью сбросит установку SteamVR и перезапустит приложение."
@@ -1390,7 +1390,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Готово!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Базовая станция обновлена. Возможно, вам понадобится отключить станцию от питания и подключить её обратно, чтобы она считалась обновлённой."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Некоторые экраны дублируют изображение (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Обнаружено неизвестное оборудование (0x2000)"
@@ -2324,9 +2324,87 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"%1: подключение не удалось. Нажмите «Обновить», чтобы повторить попытку."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Пробуждение базовых станций..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
-"Monitor_PuttingBaseStationsInStandby"	"Базовые станции переходят в режим ожидания..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"Monitor_WakingBaseStations"	"Базовые станции включаются..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby"	"Базовые станции выключаются..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Восстановление после неполного обновления"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Исправление прерванного или отменённого обновления базовой станции, препятствующее корректному отслеживанию."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"До начала обновления требуется перезапустить SteamVR, чтобы снова обнаружить эту базовую станцию."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"До начала обновления требуется перезагрузить базовую станцию и перезапустить SteamVR, чтобы снова обнаружить её. Пожалуйста, отключите станцию от питания и затем подключите обратно."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Эта базовая станция уже обновлена до более новой версии. Её не нужно обновлять."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Нажмите «Повторить», чтобы повторить попытку."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Нажмите «Отмена», чтобы перезапустить SteamVR."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Запуск... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Поиск... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Восстановление обновления базовой станции 2.0"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Поиск базовых станций...\n\nОсталось %1 сек."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Поиск базовых станций…\n\nНе завершён."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Поиск завершён.<br><br><font color=#ffffff><b>Обнаружена базовая станция с незавершённым обновлением, препятствующим её нормальной работе.</b></font><br><br>Нажмите «Обновить устройство», чтобы продолжить обновление."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Поиск завершён.\n\nПоблизости нет работающих базовых станций, требующих восстановления."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Повторить поиск"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Обновить устройство"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Нет ошибок"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Приложение уже зарегистрировано"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Отсутствует манифест приложения"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Приложение отсутствует"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Недопустимый индекс"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Неизвестное приложение"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Не удалось отправить запрос приложению"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"Приложение уже запущено"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Недопустимый манифест"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"Приложение недействительно"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Не удалось запустить приложение"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"Приложение уже запускалось"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"Происходил запуск другого приложения"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"Другое приложение завершало работу"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"Запуск приложения отменён пользователем"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"Это шаблон приложения"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR завершает работу"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"Буфер слишком мал"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
+"VRApplicationError_PropertyNotSet"	"Свойство не задано"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Неизвестное свойство"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Недопустимый параметр"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>ВНИМАНИЕ:</b> ваш шлем поддерживает дополнительные частоты обновления, но драйвер видеокарты их не обнаружил."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ВНИМАНИЕ:</b> ваш шлем поддерживает дополнительные частоты обновления, но SteamVR не может ими управлять, когда шлем находится в расширенном режиме. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Включить прямой режим.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 }
 }
