--- a/content/vrmonitor/translations/vrmonitor_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_spanish.txt
@@ -246,8 +246,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"No se ha podido iniciar %1. La interfaz de esta aplicación no está disponible."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"No se ha podido iniciar %1. Error: %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"No se ha podido iniciar %1: %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Versión %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Esto restablecerá por completo tu instalación de SteamVR y reiniciará la aplicación."
@@ -1380,7 +1380,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"¡Hecho!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"La estación base se ha actualizado correctamente. Puede que tengas que desconectar y volver a conectar el cable de corriente de la estación base para que se detecte la actualización."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Algunas pantallas están duplicadas (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Hardware desconocido detectado (0x2000)"
@@ -2119,7 +2119,7 @@
 "[english]Settings_BaseStation_PowerManagement_Explanation"	"Wake up and set base stations into Standby mode based on your use of SteamVR."
 "Settings_BaseStation_ScanForBaseStations"	"Buscar estaciones base"
 "[english]Settings_BaseStation_ScanForBaseStations"	"Scan For Base Stations"
-"Settings_BaseStation_ScanForBaseStations_Explanation"	"Detecta estaciones base que estén retransmitiendo su presencia mediante Bluetooth."
+"Settings_BaseStation_ScanForBaseStations_Explanation"	"Detecta estaciones base conocidas que estén retransmitiendo su presencia mediante Bluetooth."
 "[english]Settings_BaseStation_ScanForBaseStations_Explanation"	"Discover familiar base stations which are broadcasting their Bluetooth presence."
 "Settings_BaseStation_ConfigureBaseStations"	"Configurar canales de la estación base"
 "[english]Settings_BaseStation_ConfigureBaseStations"	"Configure Base Station Channels"
@@ -2310,8 +2310,86 @@
 "BS_PowerManagement_FailedToConnectRefresh"	"No se ha podido conectar %1. Haz clic en «Actualizar» para volver a intentarlo."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Activando estaciones base..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
 "Monitor_PuttingBaseStationsInStandby"	"Bases entrando en modo de espera..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Recuperación de actualización incompleta"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Repara una actualización interrumpida o cancelada de la estación base que le impide realizar un seguimiento normal."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Esta estación base debe ser redescubierta ópticamente mediante un reinicio de SteamVR antes de que la actualización pueda continuar."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Esta estación base debe ser encendida y redescubierta ópticamente reiniciando SteamVR antes de que la actualización pueda continuar. Desenchufa y vuelve a enchufar el cable de alimentación de la estación base."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Esta estación base tiene una versión más reciente instalada y se ha rechazado la actualización."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Haz clic en Reintentar para volver a intentarlo."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Haz clic en Cancelar para reiniciar SteamVR."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Iniciando... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[Escaneando...]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Recuperación de la actualización de la estación base 2.0"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Buscando estaciones base...\n\nQuedan %1 segundos."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Buscando estaciones base...\n\nBúsqueda incompleta."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Búsqueda completada.<br><br><font color=#ffffff><b>Se ha encontrado una estación base con una actualización incompleta que le impide funcionar normalmente.</b></font><br><br>Haz clic en Actualizar dispositivo para continuar con la actualización."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Búsqueda completada.\n\nNo hay estaciones base emitiendo cerca que necesiten recuperación."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Buscar de nuevo"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Actualizar dispositivo"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Ningún error"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"La aplicación ya está registrada"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"No hay manifiesto de aplicación"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Sin aplicación"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Índice no válido"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Aplicación desconocida"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Error al solicitar la aplicación"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"La aplicación ya se está ejecutando"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Manifiesto no válido"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"La aplicación no era válida"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Error al iniciar la aplicación"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"La aplicación ya se estaba iniciando"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"Otra aplicación ya se estaba iniciando"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"Otra aplicación ya se estaba cerrando"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"El usuario ha detenido el inicio de la aplicación"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"Esta es una aplicación modelo"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR se está cerrando"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"El búfer proporcionado era demasiado pequeño"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
+"VRApplicationError_PropertyNotSet"	"La propiedad no fue establecida"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Propiedad desconocida"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Parámetro no válido"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>AVISO:</b> Tu visor admite más frecuencias de actualización, pero el controlador de gráficos no las ha detectado."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>AVISO:</b> Tu visor admite más frecuencias de actualización, pero SteamVR no puede administrar las frecuencias de actualización cuando el visor está en modo extendido. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Activa el modo directo.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 }
 }
