--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -246,8 +246,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"ไม่สามารถเริ่ม %1 ได้ อินเตอร์เฟสของแอปพลิเคชันไม่พร้อมใช้งาน"
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"ไม่สามารถเริ่ม %1 ได้ ข้อผิดพลาดคือ %2"
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"ไม่สามารถเริ่ม %1 ได้: %2"
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"เวอร์ชัน %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"นี่จะเป็นการรีเซ็ตการติดตั้ง SteamVR ของคุณโดยสมบูรณ์ และรีสตาร์ทแอปพลิเคชัน"
@@ -1383,7 +1383,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"สำเร็จ!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"สถานีฐานถูกอัปเดตเรียบร้อยแล้ว คุณอาจจำเป็นต้องถอดสายไฟและเสียบสายไฟของสถานีฐานของคุณอีกครั้ง เพื่อให้อุปกรณ์ได้ลงทะเบียนว่าถูกอัปเดตแล้ว"
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"บางหน้าจอกำลังแสดงหน้าจอเสมือน (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"ตรวจพบฮาร์ดแวร์ที่ไม่รู้จัก (0x2000)"
@@ -2046,7 +2046,7 @@
 "[english]BluetoothControllerStatus_Connected"	"Bluetooth connected"
 "ScanForBaseStations_Scanning"	"กำลังสแกนหาสถานีฐาน...\n\nเวลาคงเหลือ %1 วินาที"
 "[english]ScanForBaseStations_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
-"ScanForBaseStation_Incomplete"	"กำลังสแกนหาสถานีฐาน...\n\nไม่สำเร็จ"
+"ScanForBaseStation_Incomplete"	"กำลังสแกนหาสถานีฐาน...\n\nไม่สมบูรณ์"
 "[english]ScanForBaseStation_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
 "ScanForBaseStation_FoundStations"	"สแกนเสร็จสมบูรณ์"
 "[english]ScanForBaseStation_FoundStations"	"Scan Complete"
@@ -2314,9 +2314,87 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 ล้มเหลวในการเชื่อมต่อ คลิก 'รีเฟรช' เพื่อลองใหม่อีกครั้ง"
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"กำลังปลุกสถานีฐาน..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
-"Monitor_PuttingBaseStationsInStandby"	"ฐานกำลังเข้าสู่โหมดรอใช้งาน..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"Monitor_WakingBaseStations"	"ฐานกำลังเปิด..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby"	"ฐานกำลังปิด..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"กู้คืนจากอัปเดตที่ไม่สมบูรณ์"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"แก้ไขอัปเดตสถานีฐานที่ถูกขัดจังหวะหรือถูกยกเลิก ซึ่งขัดขวางอุปกรณ์จากการติดตามอย่างปกติ"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"สถานีฐานนี้จำเป็นต้องถูกค้นพบด้วยแสงอีกครั้ง โดยรีสตาร์ท SteamVR ก่อนที่การอัปเดตจะสามารถดำเนินการได้"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"สถานีฐานนี้จำเป็นต้องถูกปิดและเปิดใหม่ และจำเป็นต้องถูกค้นพบด้วยแสงอีกครั้ง โดยรีสตาร์ท SteamVR ก่อนที่การอัปเดตจะสามารถดำเนินการได้ กรุณาถอดสายไฟและเสียบสายไฟของสถานีฐานอีกครั้ง"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"สถานีฐานนี้มีเวอร์ชันอัปเดตที่ใหม่กว่า และได้ปฏิเสธการอัปเดตแล้ว"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"คลิก 'ลองใหม่' ด้านล่างเพื่อลองใหม่อีกครั้ง"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"คลิก 'ยกเลิก' ด้านล่างเพื่อรีสตาร์ท SteamVR"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ กำลังเริ่ม... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ กำลังสแกน... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"การกู้คืนอัปเดตสถานีฐาน 2.0"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"กำลังสแกนหาสถานีฐาน...\n\nเวลาคงเหลือ %1 วินาที"
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"กำลังสแกนหาสถานีฐาน...\n\nไม่สมบูรณ์"
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"สแกนเสร็จสมบูรณ์แล้ว <br><br><font color=#ffffff><b>ค้นพบสถานีฐานที่มีการอัปเดตไม่สมบูรณ์ ซึ่งขัดขวางอุปกรณ์จากการทำงานอย่างปกติ</b></font> <br><br>คลิก 'อัปเดตอุปกรณ์' ด้านล่างเพื่อดำเนินการอัปเดตต่อ"
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"สแกนเสร็จสมบูรณ์\n\nไม่มีสถานีฐานที่กำลังถ่ายทอดสัญญาณซึ่งจำเป็นต้องกู้คืนอยู่ภายในระยะ"
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"สแกนอีกครั้ง"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"อัปเดตอุปกรณ์"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"ไม่พบข้อผิดพลาด"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"แอปพลิเคชันได้ถูกลงทะเบียนไว้อยู่แล้ว"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"ไม่มีมานิเฟสต์ของแอปพลิเคชัน"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"ไม่มีแอปพลิเคชัน"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"อินเด็กซ์ไม่ถูกต้อง"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"แอปพลิเคชันที่ไม่รู้จัก"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"ไม่สามารถส่งคำร้องขอแอปพลิเคชันได้"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"แอปพลิเคชันกำลังทำงานอยู่แล้ว"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"มานิเฟสต์ไม่ถูกต้อง"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"แอปพลิเคชันไม่ถูกต้อง"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"แอปพลิเคชันล้มเหลวในการเริ่มเปิด"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"แอปพลิเคชันกำลังเริ่มอยู่แล้ว"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"แอปพลิเคชันอื่นกำลังเริ่มอยู่แล้ว"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"แอปพลิเคชันอื่นกำลังออกอยู่แล้ว"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"การเริ่มแอปพลิเคชันถูกยกเลิกโดยผู้ใช้"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"นี่คือแอปพลิเคชันแม่แบบ"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR กำลังออก"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"บัฟเฟอร์ที่จัดเตรียมไว้เล็กเกินไป"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
+"VRApplicationError_PropertyNotSet"	"คุณสมบัติไม่ได้ถูกกำหนด"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"คุณสมบัติที่ไม่รู้จัก"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"พารามิเตอร์ไม่ถูกต้อง"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>หมายเหตุ:</b> หน้าจอสวมศีรษะของคุณสามารถรองรับอัตรารีเฟรชเพิ่มเติมได้ แต่ไม่ได้ถูกตรวจพบโดยไดรเวอร์กราฟิกส์ของคุณ"
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>หมายเหตุ:</b> หน้าจอสวมศีรษะของคุณสามารถรองรับอัตรารีเฟรชเพิ่มเติมได้ แต่ SteamVR ไม่สามารถจัดการอัตรารีเฟรชได้ในขณะที่หน้าจอสวมศีรษะอยู่ใน Extended Mode <a href='vrmonitor://directmode/enable'><span style='color:white;'>กรุณา เปิดการใช้งาน Direct Mode</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 }
 }
