--- a/content/vrmonitor/translations/vrmonitor_vietnamese.txt
+++ b/content/vrmonitor/translations/vrmonitor_vietnamese.txt
@@ -243,8 +243,8 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"Không thể khởi động %1. Giao diện ứng dụng không hiện hữu."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"Không thể khởi chạy %1. Lỗi %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"MonitorController_ApplicationCouldNotStart"	"Không thể khởi chạy %1: %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Phiên bản %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Hành động này sẽ thiết lập lại hoàn toàn cài đặt SteamVR của bạn và khởi động lại ứng dụng."
@@ -1343,7 +1343,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Thành công!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Trạm theo dõi đã được cập nhật thành công. Bạn có thể cần rút dây điện của trạm rồi cắm lại trước khi cập nhật được ghi nhận."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Một số màn hình đang lặp hiển thị (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Phát hiện phần cứng không xác định (0x2000)"
@@ -1942,7 +1942,7 @@
 "[english]ScanForBaseStation_FoundStations"	"Scan Complete"
 "ScanForBaseStation_NoKnownStations"	"Quét hoàn tất.\n\nTìm thấy bộ theo dõi chuyển động đang phát sóng trong khu vực, nhưng không có cái nào trong số đó được dùng để theo dõi."
 "[english]ScanForBaseStation_NoKnownStations"	"Scan Complete\n\nThere are broadcasting Base Stations within proximity, but none of them have been used for tracking yet."
-"ScanForBaseStation_NoStationsFound"	"Quét hoàn tất.\n\nKhông có bộ theo dõi chuyển động nào trong khu vực."
+"ScanForBaseStation_NoStationsFound"	"Quét hoàn tất.\n\nKhông có bộ theo dõi chuyển động nào trong khu vực lân cận."
 "[english]ScanForBaseStation_NoStationsFound"	"Scan Complete\n\nThere are no broadcasting Base Stations within proximity."
 "ScanForBaseStations_Refresh"	"Quét lại"
 "[english]ScanForBaseStations_Refresh"	"Scan Again"
@@ -2205,8 +2205,48 @@
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 kết nối thất bại. Thử nhấn lại 'Làm mới'."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Đánh thức trạm theo dõi..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
 "Monitor_PuttingBaseStationsInStandby"	"Trạm theo dõi sẽ về trạng thái nghỉ..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Phục hồi từ cập nhật không hoàn thiện"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Sửa lỗi cập nhật gặp gián đoạn hoặc bị hủy của trạm theo dõi, nguyên nhân khiến nó không thể theo dõi bình thường."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Trước khi có thể tiếp tục cập nhật, trạm theo dõi này cần được phát hiện lại bằng phương pháp quang học."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Trước khi có thể tiếp tục cập nhật, trạm theo dõi này cần được bật tắt nguồn điện và phát hiện lại bằng phương pháp quang học thông qua việc khởi động lại SteamVR. Vui lòng tháo rồi cắm lại dây nguồn của trạm theo dõi."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Trạm theo dõi này có một phiên bản cập nhật mới hơn và đã từ chối nó."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Nhấp 'Thử lại' bên dưới để thử lại."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Nhấp 'Hủy' bên dưới để khởi động lại SteamVR."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Khởi chạy... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Đang quét... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Phục hồi cập nhật trạm theo dõi 2.0"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Đang quét bộ theo dõi chuyển động...\n\nCòn %1 giây."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Đang quét bộ theo dõi chuyển động...\n\nChưa hoàn thành."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Đã quét xong.<br><br><font color=#ffffff><b>Đã tìm thấy một trạm theo dõi cập nhật chưa hoàn thành, khiến nó không thể hoạt động bình thường.</b></font><br><br>Nhấp 'Cập nhật thiết bị' bên dưới để tiếp tục cập nhật."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Quét hoàn tất.\n\nKhông có bộ theo dõi chuyển động nào cần được phục hồi trong khu vực lân cận."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Quét lại"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Cập nhật thiết bị"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Không có lỗi"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Ứng dụng đã được đăng ký rồi"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Không có bản Manifest ứng dụng"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Không có ứng dụng"
+"[english]VRApplicationError_NoApplication"	"No application"
 }
 }
