--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -246,7 +246,7 @@
 "MonitorController_ApplicationsInterfaceNotAvailable"	"Não foi possível iniciar %1. A interface do aplicativo não está disponível."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
 "MonitorController_ApplicationCouldNotStart"	"Não foi possível iniciar %1. Erro %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Versão %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Isso restaurará a instalação do SteamVR às configurações de fábrica e reiniciará o aplicativo."
@@ -1378,7 +1378,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Sucesso!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Firmware da estação base atualizado com sucesso. Talvez seja necessário reiniciar a estação base para que o firmware registre como atualizado."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Alguns visores estão espelhando (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Hardware desconhecido detectado (0x2000)"
@@ -2302,8 +2302,8 @@
 "BS_PowerManagement_FailedToConnectRefresh"	"Não foi possível conectar %1. Clique em \"Atualizar\" para tentar novamente."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Iniciando estações base..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
 "Monitor_PuttingBaseStationsInStandby"	"Estações entrando em repouso..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
 }
 }
