--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -1154,10 +1154,10 @@
 "BS20_UpdateRecovery_Title"									"Base Station 2.0 Update Recovery"
 "BS20_UpdateRecovery_Scanning"								"Scanning For Base Stations...\n\n%1 Seconds Remaining."
 "BS20_UpdateRecovery_Incomplete"							"Scanning For Base Stations...\n\nIncomplete."
-"BS20_UpdateRecovery_FoundStation"							"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_FoundStations"							"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 "BS20_UpdateRecovery_NoStationsFound"						"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"								"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"							"Update Device"
+"BS20_UpdateRecovery_UpdateDevice"							"Recover Device"
 
 "Monitor_SpontaneousQuitDialog_Title" "Unexpected SteamVR Error"
 "Monitor_SpontaneousQuitDialog_Message" "SteamVR has encountered a critical error."
