--- a/content/vrmonitor/translations/vrmonitor_errors_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_greek.txt
@@ -257,7 +257,7 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Αποσυνδέθηκε η οθόνη του headset"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset Display Disconnected"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"Δε βρέθηκε η οθόνη του headset σας, παρακαλούμε βεβαιωθείτε ότι τα καλώδιο βίντεο σας είναι συνδεδεμένα με ασφάλεια."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"Παρακαλούμε βεβαιωθείτε ότι τα καλώδιο βίντεο σας είναι συνδεδεμένα με ασφάλεια. Δε βρέθηκε η οθόνη του headset."
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Περισσότερες πληροφορίες"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
@@ -1213,5 +1213,17 @@
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
 "Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Αποσύνδεση οθόνης Headset"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Παρακαλούμε σιγουρευτείτε ότι τα καλώδια βίντεο είναι συνδεδεμένα ασφαλώς στο laptop σας. Τα Laptops μπορεί να απαιτούν ειδική ρύθμιση για να λειτουργήσουν με VR."
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Please make sure your video cables are securely connected to your laptop. Laptops may require special setup to work with VR."
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Επαναφορά Headset"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Περισσότερες πληροφορίες"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 }
 }
