--- a/content/vrmonitor/translations/vrmonitor_errors_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_thai.txt
@@ -257,7 +257,7 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"จอแสดงผลเครื่องสวมศีรษะขาดการเชื่อมต่อ"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset Display Disconnected"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"ไม่พบจอแสดงผลของเครื่องสวมศีรษะ กรุณาตรวจสอบให้แน่ใจว่าสายวิดีโอของคุณเชื่อมต่ออยู่อย่างมั่นคงแล้ว"
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"กรุณาตรวจสอบให้แน่ใจว่าสายวิดีโอของคุณเชื่อมต่ออยู่อย่างมั่นคงแล้ว เนื่องจากไม่พบจอแสดงผลของเครื่องสวมศีรษะ"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"ข้อมูลเพิ่มเติม"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
@@ -651,7 +651,7 @@
 "[english]Popover_Pose_Base_Action"	"Identify base station"
 "Popover_BaseStationsTooFarApart_Header"	"หมายเหตุการติดตั้ง VR"
 "[english]Popover_BaseStationsTooFarApart_Header"	"VR setup notice"
-"Popover_BaseStationsTooFarApart_Description"	"สถานีฐานของคุณห่างกัน %1 เมตร เพื่อสัมผัสประสบการณ์ที่ดีที่สุด ลองพิจารณาเปลี่ยนตำแหน่งสถานีฐานของคุณให้อยู่ห่างกันไม่เกิน 5.5 เมตร (18 ฟุต)"
+"Popover_BaseStationsTooFarApart_Description"	"สถานีฐานของคุณอยู่ห่างกัน %1 เมตร เพื่อสัมผัสประสบการณ์ที่ดีที่สุด ลองพิจารณาเปลี่ยนตำแหน่งสถานีฐานของคุณให้อยู่ห่างกันไม่เกิน 5.5 เมตร (18 ฟุต)"
 "[english]Popover_BaseStationsTooFarApart_Description"	"Your base stations are %1 meters apart. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart."
 "Popover_SeeOnlyOneBase_Header"	"มีเพียงสถานีฐานเดียวเท่านั้นที่มองเห็น"
 "[english]Popover_SeeOnlyOneBase_Header"	"Only one base station is visible"
@@ -1214,5 +1214,17 @@
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
 "Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/th/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"แล็ปท็อป: จอแสดงผลเครื่องสวมศีรษะขาดการเชื่อมต่อ"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"กรุณาตรวจสอบให้แน่ใจว่าสายวิดีโอของคุณเชื่อมต่ออยู่อย่างมั่นคงกับแล็ปท็อปของคุณแล้ว แล็ปท็อปอาจจำเป็นต้องใช้การติดตั้งระบบแบบพิเศษเพื่อให้สามารถใช้งาน VR ได้"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Please make sure your video cables are securely connected to your laptop. Laptops may require special setup to work with VR."
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"รีเซ็ตเครื่องสวมศีรษะ"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"ข้อมูลเพิ่มเติม"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/th/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 }
 }
