--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -246,7 +246,7 @@
 "MonitorController_ApplicationsInterfaceNotAvailable"	"%1 käynnistys epäonnistui. Sovelluksen käyttöliittymä ei ollut käytettävissä."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
 "MonitorController_ApplicationCouldNotStart"	"%1 käynnistäminen epäonnistui. Tapahtunut virhe: %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Versio %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Tämä nollaa koko järjestelmäsi, mutta kaikista poistetuista tiedostoista jää varmuuskopio talteen.\n\n- Kaikki SteamVR:n asetukset poistetaan\n- Käynnistyspolun asetukset poistetaan\n- Huoneen kartoitus poistetaan\n\nSovellus käynnistyy uudelleen nollauksen jälkeen!\n"
@@ -1378,7 +1378,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Onnistui!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Tukiasemien laiteohjelmisto päivitettiin onnistuneesti. Saatat joutua katkaisemaan tukiaseman virran ja kytkemään sen uudestaan ennen kuin laiteohjelmisto tunnistetaan päivitetyksi."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Jotkut näytöt peilaavat (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Tuntematon laite havaittu (0x2000)"
@@ -2252,6 +2252,8 @@
 "[english]BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 requires a device update to enable channel configuration."
 "BS20_ConfigureChannel_ProgressConnecting"	"\nYhdistetään tukiasemaan...\n"
 "[english]BS20_ConfigureChannel_ProgressConnecting"	"\nConnecting To Base Stations...\n"
+"Settings_DoNotFadeToGrid"	"Älä näytä ruudukkoa, kun sovellus jää jumiin."
+"[english]Settings_DoNotFadeToGrid"	"Do not fade to grid when app hangs"
 "Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Windowsin vanhemmat versiot eivät tue liikkeenpehmennystä."
 "[english]Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Motion Smoothing is not supported on older versions of Windows."
 "Settings_Advanced_RefreshRate_Header"	"Virkistystaajuus"
@@ -2262,13 +2264,41 @@
 "[english]Settings_Advanced_Restart"	"<i>This pending change will take effect once you <a href='vrmonitor://restartsystem'><span style='color:white;'>Restart SteamVR</span></a></i>"
 "BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth-ominaisuutta ei löydetty. Laitepäivitystä edellytetään toiminnon käyttöönottamiseksi. Siirry VR-lasien kuvakkeen päälle  ja valitse \"Päivitä laite\"."
 "[english]BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth capability not detected. A device update is needed to enable this feature. Hover over the headset icon and select Update Device."
+"BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* EI SUOSITELLA, jos useita SteamVR-käyttäjiä on tilassa, jossa sovelletaan seurantateknologiaa</font>"
+"[english]BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PowerManagement_ObservedInTracking"	"Havaittu aiemmassa seurantaistunnossa"
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 epäonnistui yhteyden muodostamisessa. Klikkaa \"Päivitä\" ja yritä uudelleen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Tukiasemia herätetään..."
-"[english]Monitor_WakingBaseStations"	"Waking up Base Stations..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
 "Monitor_PuttingBaseStationsInStandby"	"Tukiasemat siirtyvät lepotilaan..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases going into standby..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Palautus keskeytyneen päivityksen vuoksi"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Jatka klikkaamalla alta \"Yritä uudelleen\""
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Klikkaa alta \"Peruuta\", niin SteamVR käynnistyy uudelleen."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
+"FirmwareWizard_ProgressPercentStarting"	"[ Käynnistyy... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Skannataan... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Tukiasema 2.0, päivitysprosessin palautus"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Etsitään tukiasemia...\n\n%1 sekuntia jäljellä."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_FoundStation"	"Etsintä suoritettu.<br><br><font color=#ffffff><b>Löydetty päivitystä odottava tukiasema.</b></font><br><br>Jatka päivitystä klikkaamalla alta \"Päivitä laite\"."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Etsintä suoritettu.\n\nKuuluvuusalueelta ei löydy laitetta, joka tarvitsisi palautusta."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Skannaa uudelleen"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Päivitä laite"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Ei virhettä"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR poistuu"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
 }
 }
