--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -246,7 +246,7 @@
 "MonitorController_ApplicationsInterfaceNotAvailable"	"%1 başlatılamadı. Uygulamanın arayüzü mevcut değil."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
 "MonitorController_ApplicationCouldNotStart"	"%1 Başlatılamadı. Hata %2."
-"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1. Error was %2."
+"[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Sürüm %1"
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Bu tüm sistemi sıfırlayacak ancak silinen bütün dosyaların yedeği alınacak.\n\n- SteamVR'ın tüm ayarları silinecektir\n- runtime'ın tüm ayarları silinecektir\n- Oda kurulumunun tüm verileri silinecektir\n\nUygulama sıfırlandıktan sonra yeniden başlayacaktır!\n"
@@ -666,7 +666,7 @@
 "[english]PairingWizard_HelperAppFailed_MoreInfo"	"More info"
 "Status_Title"	"SteamVR Durumu"
 "[english]Status_Title"	"SteamVR Status"
-"MenuAction_FirmwareUpdate"	"Aygıt Yazılımını Güncelle"
+"MenuAction_FirmwareUpdate"	"Cihazı Güncelle"
 "[english]MenuAction_FirmwareUpdate"	"Update Device"
 "Settings_StatusWindowAlwaysOnTop_Info"	"  "
 "[english]Settings_StatusWindowAlwaysOnTop_Info"	" "
@@ -674,11 +674,11 @@
 "[english]Settings_StatusWindowAlwaysOnTop_Text"	"Display always on top"
 "Main_JumplistEntry_RunTutorial"	"Eğitimi Başlat"
 "[english]Main_JumplistEntry_RunTutorial"	"Tutorial"
-"FirmwareWizard_Shutdown_Title"	"Aygıt Yazılımını Güncelle"
+"FirmwareWizard_Shutdown_Title"	"Cihazı Güncelle"
 "[english]FirmwareWizard_Shutdown_Title"	"Update Device"
 "FirmwareWizard_Shutdown_TextContent"	"Yazılımı güncelleştirmek için şu anda çalışan tüm VR uygulamalarını kapatmamız gerekiyor.\n\nDevam etmek ister misiniz?"
 "[english]FirmwareWizard_Shutdown_TextContent"	"To update your device, SteamVR will need to quit any currently running VR applications.\n\nWould you like to continue?"
-"FirmwareWizard_DeviceOverview_Title"	"Aygıt Yazılımını Güncelle"
+"FirmwareWizard_DeviceOverview_Title"	"Cihazı Güncelle"
 "[english]FirmwareWizard_DeviceOverview_Title"	"Update Device"
 "FirmwareWizard_DeviceOverview_TextContent"	"Hangi cihazı güncellemek istersiniz?"
 "[english]FirmwareWizard_DeviceOverview_TextContent"	"Which device would you like to update?"
@@ -1078,7 +1078,7 @@
 "[english]MenuAction_HideDisplayMirror"	"Hide VR View"
 "MenuAction_DisplayMirror"	"Görüntü Yansıması"
 "[english]MenuAction_DisplayMirror"	"Display VR View"
-"MenuAction_UpdateFirmware"	"Aygıt Yazılımını Güncelle"
+"MenuAction_UpdateFirmware"	"Cihazı Güncelle"
 "[english]MenuAction_UpdateFirmware"	"Update Device"
 "MenuAction_ForceFirmware"	"Aygıt Yazılımını Zorla"
 "[english]MenuAction_ForceFirmware"	"Force Firmware"
@@ -1381,7 +1381,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Başarılı!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Ana İstasyon yazılımı başarıyla güncellendi. Yazılımın güncellenmiş olarak kaydedilmesi için ana istasyonu kapatıp açmanız gerekebilir."
-"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to nplug and then replug your base station's power cable for it to register as updated."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Bazı Ekranlar yansıtılıyor (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Bilinmeyen Donanım Algılandı (0x2000)"
@@ -1420,7 +1420,7 @@
 "[english]Startup_DisplayLinkIsInstalled"	"DisplayLink is incompatible with SteamVR. Please uninstall DisplayLink drivers and software from your machine and reboot before using SteamVR."
 "FrameTiming_Other"	"Diğer"
 "[english]FrameTiming_Other"	"Other"
-"Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Uygulanması gereken kritik bir kamera yazılım güncellemesi var. Başlık simgesinin üzerinde duraksayın ve Yazılım Güncellemeyi seçin.</font>"
+"Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Uygulanması gereken kritik bir kamera cihazı güncellemesi var. Başlık simgesinin üzerine gelin ve Cihazı Güncelle seçeneğini seçin.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera device update that must be applied. Hover over the headset icon and select Update Device.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Kamera başlığın takılı olduğu USB girişinde algılanmadı.<br>Farklı bir USB girişi deneyin ve SteamVR'ı yeniden başlatın.</font>"
 "[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>If your headset includes camera capabilities, try plugging it into a different USB port, then Restart SteamVR.</font>"
@@ -1800,11 +1800,11 @@
 "[english]Settings_EnableDashboard"	"Enable VR Dashboard"
 "Settings_ArcadeMode"	"Salon Modunu Etkinleştir"
 "[english]Settings_ArcadeMode"	"Enable arcade mode"
-"Settings_AllowAsyncReprojection"	"Eşzamansız yeniden yansıtmaya izin ver (tavsiye edilen)"
+"Settings_AllowAsyncReprojection"	"Eş zamansız yeniden yansıtmaya izin ver (tavsiye edilen)"
 "[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
-"Advanced_AsyncActive"	"Eşzamansız Yeniden Yansıtma Açık"
+"Advanced_AsyncActive"	"Eş Zamansız Yeniden Yansıtma Açık"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
-"Advanced_AsyncNotActive"	"Eşzamansız Yeniden Yansıtma Kapalı"
+"Advanced_AsyncNotActive"	"Eş Zamansız Yeniden Yansıtma Kapalı"
 "[english]Advanced_AsyncNotActive"	"Async Reprojection Off"
 "Lighthouse_BasestationInternalFault_01_Header"	"Ana istasyon kullanım dışı"
 "[english]Lighthouse_BasestationInternalFault_01_Header"	"Base station unusable"
@@ -2294,5 +2294,89 @@
 "[english]BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 requires a device update to enable channel configuration."
 "BS20_ConfigureChannel_ProgressConnecting"	"\nAna İstasyonlara Bağlanılıyor...\n"
 "[english]BS20_ConfigureChannel_ProgressConnecting"	"\nConnecting To Base Stations...\n"
+"Settings_DoNotFadeToGrid"	"Uygulama donduğunda ızgaraları gösterme"
+"[english]Settings_DoNotFadeToGrid"	"Do not fade to grid when app hangs"
+"Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Hareket Düzeltmesi, Windows'un eski sürümlerinde desteklenmemektedir."
+"[english]Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Motion Smoothing is not supported on older versions of Windows."
+"Settings_Advanced_RefreshRate_Header"	"Yenileme Oranı"
+"[english]Settings_Advanced_RefreshRate_Header"	"Refresh Rate"
+"Settings_Advanced_RefreshRate_HzSuffix"	"hz"
+"[english]Settings_Advanced_RefreshRate_HzSuffix"	"hz"
+"Settings_Advanced_Restart"	"<i>Bu bekleyen değişiklik <a href='vrmonitor://restartsystem'><span style='color:white;'>SteamVR yeniden başlatıldığında</span></a></i> etkisini gösterecektir."
+"[english]Settings_Advanced_Restart"	"<i>This pending change will take effect once you <a href='vrmonitor://restartsystem'><span style='color:white;'>Restart SteamVR</span></a></i>"
+"BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth özelliği algılanmadı. Bu özelliği etkinleştirmek için bir cihaz güncellemesi gerekmektedir. Başlık simgesinin üstüne gelin ve Cihazı Güncelle seçeneğini seçin."
+"[english]BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth capability not detected. A device update is needed to enable this feature. Hover over the headset icon and select Update Device."
+"BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* Paylaşılan izleme alanları ile çoklu SteamVR kullanıcıları için ÖNERİLMEZ.</font>"
+"[english]BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PowerManagement_ObservedInTracking"	"Bir önceki izleme oturumunda gözlendi"
+"[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
+"BS_PowerManagement_FailedToConnectRefresh"	"%1 bağlanamadı. Yeniden denemek için \"Yenile\"ye tıklayın."
+"[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
+"Monitor_WakingBaseStations"	"İstasyonlar uyandırılıyor..."
+"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_PuttingBaseStationsInStandby"	"İstasyonlar bekleme moduna geçiyor..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Tamamlanmamış Güncellemeden Kurtarma"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Normal izlemesini engelleyen kesilen veya iptal edilen bir ana istasyon güncellemesini düzeltin."
+"[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Bu ana istasyonun güncelleme işlemine devam etmeden önce SteamVR yeniden başlatılarak optik olarak yeniden ayarlanması gerekmektedir."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Bu ana istasyonun güncelleme işlemine devam etmeden önce SteamVR'ın yeniden başlatılarak optik olarak yeniden ayarlanması için güç döngüsüne ihtiyacı vardır. Lütfen ana istasyonun güç kablosunu sökünüz ve tekrar takınız."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_ProgressPercentStarting"	"[ Başlatılıyor... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Taranıyor... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Title"	"Ana İstasyon 2.0 Güncelleme Kurtarma"
+"[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_Scanning"	"Ana İstasyonları Tarıyor...\n\n%1 Saniye Kaldı."
+"[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Ana İstasyonları Tarıyor...\n\nTamamlanmadı."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"Tarama Tamamlandı.<br><br><font color=#ffffff><b>Normal bir şekilde çalışmasını önleyen, tamamlanmamış güncelleme sahip bir Ana İstasyon bulundu.</b></font><br><br>Güncellemeye devam etmek için aşağıdaki \"Cihazı Güncelle\" seçeneğini seçin."
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Tarama Tamamlandı.\n\nÇevrenizde yayın yapan hiçbir Ana İstasyon yok."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
+"BS20_UpdateRecovery_Refresh"	"Tekrar Tara"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
+"BS20_UpdateRecovery_UpdateDevice"	"Cihazı Güncelle"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"VRApplicationError_None"	"Hata yok"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Uygulama zaten kaydolundu"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Uygulama Manifestosu yok"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Uygulama yok"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_UnknownApplication"	"Bilinmeyen uygulama"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Uygulama talebi başarısız"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
+"VRApplicationError_ApplicationAlreadyRunning"	"Uygulama zaten çalışıyor"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Geçersiz Manifesto"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"Uygulama geçersizdi"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Uygulama başlatılamadı"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_ApplicationAlreadyStarting"	"Uygulama zaten başlatıldı"
+"[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
+"VRApplicationError_LaunchInProgress"	"Başka bir uygulama zaten başlatıldı"
+"[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
+"VRApplicationError_OldApplicationQuitting"	"Başka bir uygulamadan zaten çıkılıyordu"
+"[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
+"VRApplicationError_TransitionAborted"	"Uygulamanın başlaması kulllanıcı tarafından iptal edildi"
+"[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR'dan çıkış yapılıyor"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_PropertyNotSet"	"Özellik ayarlanmadı"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Bilinmeyen özellik"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Geçersiz parametre"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
 }
 }
